# resthub

./: .coveralls.yml  .gitignore  .travis.yml  README.md  docs.html  index.html  params.json  pom.xml
.travis/: database.sh
.travis/oracle/: download.js  download.sh  install.sh
clients/: pom.xml
clients/angular2/client/: README.md  resthub-example.component.ts  resthub.service.ts
clients/angular2/example/resthub/: README.md  angular-cli.json  package.json
clients/angular2/resthub/: resthub-example.component.ts
clients/angularJS/: README.md  resthub.js
clients/angularJS/examples/: index.html  select_max.html
clients/angularJS/examples/js/: app.js
clients/cpp/: CMakeLists.txt  pom.xml
clients/cpp/include/: Query.h  Request.h  Response.h  resthub.h
clients/cpp/src/: Query.cpp  Request.cpp  Response.cpp  resthub.cpp  test_main.cpp
clients/java/: pom.xml
clients/jquery/: pom.xml
clients/python/: pom.xml
clients/python/src/deploy/: readme.txt  venv.config.json
clients/python/src/test/: rhapi_tests.py
integrationTest/: pom.xml  startPython.sh
integrationTest/python/: .project  pom.xml
integrationTest/python/src/test/: rhapi_tests.py
integrationTest/src/test/ddl/: sales.sql  tables.sql  texts.sql
integrationTest/src/test/resources/: log4j.properties  test_tables.json
model/: pom.xml
model/src/test/resources/: log4j.properties
server/: pom.xml
server/src/main/resources/: ehcache.xml  hibernate.cfg.xml  resthub.properties
server/src/test/ddl/: all.sql  customer.sql  product.sql  sales.sql  texts.sql
stylesheets/: stylesheet.css
(+573 files in other folders)
